More spacing issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -40,8 +40,10 @@ h6 {
 }
 
 .intro-image-text {
+    box-sizing: content-box;
     padding-right: 2%;
     padding-bottom: 2%;
+    margin: 0;
 }
 
 .intro-message {
@@ -67,7 +69,7 @@ h6 {
 }
 
 .intro-pic {
-    width: 15%;
+    width: 20%;
 }
 
 @media(max-width:767px) {
